--- a/index_en.html
+++ b/index_en.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -81,21 +79,14 @@
              </div>
         </section>
 
-        <!-- Section 3: Substack Latest Posts (Placeholder) -->
-        <section id="substack-latest" class="container">
-            <h2>Latest AI Newsletters</h2> <!-- English version of "AI Bültenleri" -->
-            <div class="newsletter-list-placeholder">
-                <p>Placeholder section where the latest newsletter posts will be listed.</p>
-                <p><em>(Content to be added manually or via JavaScript fetching Substack RSS feed later)</em></p>
-                <ul>
-                    <li><a href="#">Placeholder: Newsletter Title 1</a> - Date</li>
-                    <li><a href="#">Placeholder: Newsletter Title 2</a> - Date</li>
-                    <li><a href="#">Placeholder: Newsletter Title 3</a> - Date</li>
-                </ul>
-                <!-- Maybe a link to the Substack archive -->
-                <p><a href="https://yapayzeka101.substack.com/" target="_blank" rel="noopener noreferrer">View all newsletters</a></p>
-            </div>
+        <!-- Section 3: Latest AI News -->
+        <section id="latest-ai-news" class="container">
+            <h2>Latest AI News</h2>
+            <ul id="ai-news-list">
+                <p>Loading latest news...</p> <!-- Placeholder text -->
+            </ul>
         </section>
+     
 
     </main>
 
