temp docs added

--- a/index_en.html
+++ b/index_en.html
@@ -56,7 +56,7 @@
                                 <!-- Add more content as needed -->
                             </div>
                             <div class="photo-box">
-                                <img src="images/Yolda_318sb.jpg" alt="Placeholder for personal photograph" style="width:100%; max-width:400px; height:auto; background:#ccc;">
+                                <img src="assets/Yolda_318sb.jpg" alt="Placeholder for personal photograph" style="width:100%; max-width:400px; height:auto; background:#ccc;">
                             </div>
                         </div>
                     </div>
