--- a/index_en.html
+++ b/index_en.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Placeholder: Welcome to C. Murad Özsert's personal website. Learn more about..."> <!-- SEO: Update with real content -->
 
     <title>C. Murad Özsert - Home</title> <!-- SEO: Title -->
-
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css"> <!-- Link to CSS -->
 
     <!-- Optional Favicons -->
