border deleted for substack subscribe

--- a/index_en.html
+++ b/index_en.html
@@ -83,7 +83,7 @@
              <h2>Join the AI Newsletter</h2> <!-- English version of "AI Bülten'e Üye Ol" -->
              <div class="substack-embed-wrapper">
                 <!-- The iframe provided by the user -->
-                <iframe src="https://yapayzeka101.substack.com/embed" width="1080" height="320" style="border:1px solid #EEE; background:white; max-width: 100%;" frameborder="0" scrolling="no" title="Subscribe to Yapay Zeka 101 Newsletter"></iframe>
+                <iframe src="https://yapayzeka101.substack.com/embed" width="400" height="320" style="background:white; max-width: 100%;" frameborder="0" scrolling="no" title="Subscribe to Yapay Zeka 101 Newsletter"></iframe>
              </div>
         </section>
 
