Topics Page completed

--- a/index_en.html
+++ b/index_en.html
@@ -24,8 +24,8 @@
                 <ul>
                     <!-- Update hrefs when other pages are created -->
                     <li><a href="about_en.html">About</a></li>
-                    <li><a href="speaking_en.html">Speaking</a></li> <!-- Assuming "Etkinlik Davet" translates best to Speaking/Events -->
-                    <li><a href="#substack-subscribe">AI Newsletter</a></li> <!-- Link to the subscribe section for now -->
+                    <li><a href="topics_en.html">Event Topics</a></li> 
+                    <li><a href="blog_en.html">AI Blog</a></li> 
                     <li><a href="contact_en.html">Contact</a></li>
                 </ul>
             </nav>
@@ -56,7 +56,7 @@
                                 <!-- Add more content as needed -->
                             </div>
                             <div class="photo-box">
-                                <img src="assets/Yolda_318sb.jpg" alt="Placeholder for personal photograph" style="width:100%; max-width:400px; height:auto; background:#ccc;">
+                                <img src="assets/Main_1.jpg" alt="Placeholder for personal photograph" style="width:100%; max-width:400px; height:auto; background:#ccc;">
                             </div>
                         </div>
                     </div>
