--- a/about_tr.html
+++ b/about_tr.html
@@ -18,19 +18,19 @@
         <div class="container header-flex"> <!-- Flex container for layout -->
             <div class="logo">
                 <!-- Link the logo/name to the home page of the current language -->
-                <a href="index_en.html"><strong>C. Murad Özsert</strong></a>
+                <a href="index_tr.html"><strong>C. Murad Özsert</strong></a>
             </div>
             <nav class="main-nav">
                 <ul>
                     <!-- Update hrefs when other pages are created -->
-                    <li><a href="about_en.html">About</a></li>
-                    <li><a href="topics_en.html">Event Topics</a></li> 
-                    <li><a href="blog_en.html">AI Blog</a></li> 
-                    <li><a href="contact_en.html">Contact</a></li>
+                    <li><a href="about_tr.html">Hakkımda</a></li>
+                    <li><a href="topics_tr.html">Konuşma Konuları</a></li> 
+                    <li><a href="blog_tr.html">Blog</a></li> 
+                    <li><a href="contact_tr.html">İletişim</a></li>
                 </ul>
             </nav>
             <div class="language-toggle">
-                <a href="index_en.html" class="lang-active">EN</a> | <a href="index_tr.html">TR</a>
+                <a href="index_tr.html" class="lang-active">TR</a> | <a href="index_en.html">EN</a>
             </div>
             <!-- Optional: Mobile Menu Button (hidden by default, shown on mobile via CSS) -->
             <!-- <button class="mobile-menu-toggle" aria-label="Open navigation menu">☰</button> -->
@@ -133,7 +133,7 @@
 
         <!-- Section 2: Latest AI News -->
         <section id="latest-ai-news" class="container">
-            <h2>Latest AI News</h2>
+            <h2>Son Yazılar</h2>
             <ul id="ai-news-list">
                 <p>Loading latest news...</p> <!-- Placeholder text -->
             </ul>
@@ -141,7 +141,7 @@
 
         <!-- Section 3: Substack Subscribe -->
         <section id="substack-subscribe" class="container text-center"> <!-- Added text-center for potential centering -->
-             <h2>Join the AI Newsletter</h2> <!-- English version of "AI Bülten'e Üye Ol" -->
+             <h2>Haftalık Bülten'e Üye Ol</h2> <!-- English version of "AI Bülten'e Üye Ol" -->
              <div class="substack-embed-wrapper">
                 <!-- The iframe provided by the user -->
                 <iframe src="https://yapayzeka101.substack.com/embed" width="400" height="320" style="background:white; max-width: 100%;" frameborder="0" scrolling="no" title="Subscribe to Yapay Zeka 101 Newsletter"></iframe>
@@ -156,10 +156,7 @@
                 <p>© 2025 C. Murad Özsert</p> <!-- Wireframe says 2025, adjust if needed -->
             </div>
             <div class="footer-links">
-                <a href="contact_en.html">Contact</a> <!-- Link to Contact page -->
-                <a href="YOUR_LINKEDIN_URL_HERE" target="_blank" rel="noopener noreferrer">LinkedIn</a> <!-- Add your real LinkedIn URL -->
-                <!-- Add X/Twitter link if desired -->
-                <!-- <a href="YOUR_X_URL_HERE" target="_blank" rel="noopener noreferrer">X</a> -->
+                <a href="contact_tr.html">Contact</a> <!-- Link to Contact page -->
             </div>
         </div>
     </footer>
