--- a/topics_tr.html
+++ b/topics_tr.html
@@ -21,19 +21,19 @@
         <div class="container header-flex"> <!-- Flex container for layout -->
             <div class="logo">
                 <!-- Link the logo/name to the home page of the current language -->
-                <a href="index_en.html"><strong>C. Murad Özsert</strong></a>
+                <a href="index_tr.html"><strong>C. Murad Özsert</strong></a>
             </div>
             <nav class="main-nav">
                 <ul>
                     <!-- Update hrefs when other pages are created -->
-                    <li><a href="about_en.html">About</a></li>
-                    <li><a href="topics_en.html">Event Topics</a></li>
-                    <li><a href="blog_en.html">AI Blog</a></li>
-                    <li><a href="contact_en.html">Contact</a></li>
+                    <li><a href="about_tr.html">Hakkımda</a></li>
+                    <li><a href="topics_tr.html">Konuşma Konuları</a></li> 
+                    <li><a href="blog_tr.html">Blog</a></li> 
+                    <li><a href="contact_tr.html">İletişim</a></li>
                 </ul>
             </nav>
             <div class="language-toggle">
-                <a href="index_en.html" class="lang-active">EN</a> | <a href="index_tr.html">TR</a>
+                <a href="index_tr.html" class="lang-active">TR</a> | <a href="index_en.html">EN</a>
             </div>
             <!-- Optional: Mobile Menu Button (hidden by default, shown on mobile via CSS) -->
             <!-- <button class="mobile-menu-toggle" aria-label="Open navigation menu">☰</button> -->
@@ -47,32 +47,32 @@
             <ul id="ai-topics-list">
                 <li style="background-image: url('assets/Topics_1.1.jpeg');">
                     <div class="ai-topics-content">
-                        <h3>Sanayi Devrimi, İnternet ve Yapay Zekâ: Üç Dönüşüm, Üç Farklı Dünya</h3>
-                        <p>Köklü Dönüşüme Hazır mısın?</p>
+                        <h3>Sanayi Devrimi, İnternet ve Yapay Zekâ</h3>
+                        <p>Üç Dönüşüm, Üç Farklı Dünya</p>
                         <a href="https://yapayzeka101.substack.com/p/tek-kisilik-dev-kadro-yapay-zeka" target="_blank"
                             rel="noopener noreferrer" class="read-more-link">Read more &rarr;</a>
                     </div>
                 </li>
                 <li style="background-image: url('assets/Topics_1.2.jpeg');">
                     <div class="ai-topics-content">
-                        <h3>Tek Kişilik Dev Kadro: Yapay Zekâ Çağında Solo Girişimcilik</h3>
-                        <p>Solopreneurship Gerçekten Mümkün mü?</p>
+                        <h3>Tek Kişilik Dev Kadro: Solopreneurship</h3>
+                        <p>Yapay Zekâ Çağında Solo Girişimcilik</p>
                         <a href="https://yapayzeka101.substack.com/p/yapay-zeka-meslekleri-donusturuyor" target="_blank"
                             rel="noopener noreferrer" class="read-more-link">Read more &rarr;</a>
                     </div>
                 </li>
                 <li style="background-image: url('assets/Topics_1.3.jpeg');">
                     <div class="ai-topics-content">
-                        <h3>Kartlar Yeniden Dağıtıldı: Yapay Zekâ Agentleriyle Yeni Nesil Organizasyon Yapısı</h3>
-                        <p>Agentic Yapay Zeka'ya hazır mıyız?</p>
+                        <h3>Yapay Zekâ Agentleriyle Yeni Nesil Organizasyon</h3>
+                        <p>Kartlar Yeniden Dağıtılıyor</p>
                         <a href="https://yapayzeka101.substack.com/p/test-header" target="_blank"
                             rel="noopener noreferrer" class="read-more-link">Read more &rarr;</a>
                     </div>
                 </li>
                 <li style="background-image: url('assets/Topics_1.4.jpeg');">
                     <div class="ai-topics-content">
-                        <h3>Veriyi Kim Sahiplenirse Geleceği O Yönetecek: Yapay Zekâ Çağında Kurumsal Hafıza</h3>
-                        <p>Verimize Ne kadar Sahibiz?</p>
+                        <h3>Yapay Zekâ Çağında Kurumsal Hafıza</h3>
+                        <p>Veriyi Kim Sahiplenirse Gelecek onun</p>
                         <a href="https://yapayzeka101.substack.com/p/test-header" target="_blank"
                             rel="noopener noreferrer" class="read-more-link">Read more &rarr;</a>
                     </div>
@@ -87,33 +87,33 @@
             <ul id="ai-topics-list">
                 <li style="background-image: url('assets/Topics_2.1.jpeg');">
                     <div class="ai-topics-content">
-                        <h3>Veri Konuşuyor: Yapay Zekâ ile Finansın Dönüşen Aklı</h3>
-                        <p>Finans Sektörü Nasıl Değişecek?</p>
+                        <h3>Yapay Zekâ ile Finansın Dönüşen Aklı</h3>
+                        <p>Verileri anlamlandırmak artık çok kolay</p>
                         <a href="https://yapayzeka101.substack.com/p/tek-kisilik-dev-kadro-yapay-zeka" target="_blank"
                             rel="noopener noreferrer" class="read-more-link">Read more &rarr;</a>
                     </div>
                 </li>
                 <li style="background-image: url('assets/Topics_2.2.jpeg');">
                     <div class="ai-topics-content">
-                        <h3>Yapay Zeka Çağında Alışveriş:Perakendenin Sessiz Devrimi</h3>
-                        <p>İnsansız Bir Deneyim Mümkün mü?</p>
+                        <h3>Perakendenin Sessiz Devrimi</h3>
+                        <p>Yapay Zeka Çağında İnsansız Bir Deneyim</p>
                         <a href="https://yapayzeka101.substack.com/p/yapay-zeka-meslekleri-donusturuyor" target="_blank"
                             rel="noopener noreferrer" class="read-more-link">Read more &rarr;</a>
                     </div>
                 </li>
                 <li style="background-image: url('assets/Topics_2.3.jpeg');">
                     <div class="ai-topics-content">
-                        <h3>Konuşan Ajanlar, Hareket Eden Veriler: Yapay Zekâ ile Lojistikte Uçtan Uca İzlenebilirlik
+                        <h3>Yapay Zekâ ile Lojistikte Uçtan Uca İzlenebilirlik
                         </h3>
-                        <p>Lojistikte Değişimin Anahtarı Yapay Zeka mı?</p>
+                        <p>Konuşan Ajanlar, Kontrol kuleleri ve dahası</p>
                         <a href="https://yapayzeka101.substack.com/p/yapay-zeka-meslekleri-donusturuyor" target="_blank"
                             rel="noopener noreferrer" class="read-more-link">Read more &rarr;</a>
                     </div>
                 </li>
                 <li style="background-image: url('assets/Topics_2.4.jpeg');">
                     <div class="ai-topics-content">
-                        <h3>Yeni nesil E-Ticaret: Yapay Zekâ ile Dönüşen Kullanıcı Deneyimi</h3>
-                        <p>Internet ile Başlayan Dönüşüm Nasıl Devam Edecek?</p>
+                        <h3>Yeni Nesil E-Ticaret: Yeni Nesil Kullanıcı Deneyimi</h3>
+                        <p>Internet ile Başlayan Dönüşüm Yapay Zeke ile neye evrilecek?</p>
                         <a href="https://yapayzeka101.substack.com/p/yapay-zeka-meslekleri-donusturuyor" target="_blank"
                             rel="noopener noreferrer" class="read-more-link">Read more &rarr;</a>
                     </div>
@@ -128,31 +128,31 @@
             <ul id="ai-topics-list">
                 <li style="background-image: url('assets/Topics_3.1.jpeg');">
                     <div class="ai-topics-content">
-                        <h3>İK 4.0: Yapay Zekâ Çağında İnsanın Yeni Rolü</h3>
-                        <p>İnsanoğlu Nasıl Dönüşmeli?</p>
+                        <h3>Yapay Zekâ Çağında İnsanın Yeni Rolü</h3>
+                        <p>İK 4.0: İnsanoğlu Nasıl Dönüşmeli?</p>
                         <a href="https://yapayzeka101.substack.com/p/tek-kisilik-dev-kadro-yapay-zeka" target="_blank"
                             rel="noopener noreferrer" class="read-more-link">Read more &rarr;</a>
                     </div>
                 </li>
                 <li style="background-image: url('assets/Topics_3.2.jpeg');">
                     <div class="ai-topics-content">
-                        <h3>Satır Satır Değişim: Yazılım Geliştirmede Yapay Zekânın Yükselişi</h3>
-                        <p>Yapay Zeka Yazılım Geliştirmeyi Yiyecek mi?</p>
+                        <h3>Yazılım Geliştirmede Yapay Zekânın Yükselişi</h3>
+                        <p>Satır Satır Değişim: Yapay Zeka Yazılım Geliştirmeyi Yiyecek mi?</p>
                         <a href="https://yapayzeka101.substack.com/p/yapay-zeka-meslekleri-donusturuyor" target="_blank"
                             rel="noopener noreferrer" class="read-more-link">Read more &rarr;</a>
                     </div>
                 </li>
                 <li style="background-image: url('assets/Topics_3.3.jpeg');">
                     <div class="ai-topics-content">
-                        <h3>İlk Temastan Sadakate: AI Destekli Müşteri Deneyiminin Yeni Dönemi</h3>
-                        <p>İnsansız deneyim tatmin edecek mi?</p>
+                        <h3>AI Destekli Müşteri Deneyiminin Yeni Dönemi</h3>
+                        <p>İlk Temastan Sadakate: İnsansız deneyim tatmin edecek mi?</p>
                         <a href="https://yapayzeka101.substack.com/p/yapay-zeka-meslekleri-donusturuyor" target="_blank"
                             rel="noopener noreferrer" class="read-more-link">Read more &rarr;</a>
                     </div>
                 </li>
                 <li style="background-image: url('assets/Topics_3.4.jpeg');">
                     <div class="ai-topics-content">
-                        <h3>Yaratıcılığın Yeni Ortağı: Tasarım Dünyasında Yapay Zekânın Etkisi
+                        <h3>Yaratıcılığın Yeni Ortağı'nın Tasarım Dünyasında Etkisi
                         </h3>
                         <p>Hayallerin Başladığı Yer Daha mı Önemli Hale Geldi?</p>
                         <a href="https://yapayzeka101.substack.com/p/yapay-zeka-meslekleri-donusturuyor" target="_blank"
@@ -163,15 +163,21 @@
         </section>
 
         <!-- Section 3: Substack Subscribe -->
-        <section id="substack-subscribe" class="container text-center">
-            <!-- Added text-center for potential centering -->
-            <h2>Join the AI Newsletter</h2> <!-- English version of "AI Bülten'e Üye Ol" -->
-            <div class="substack-embed-wrapper">
+        <section id="substack-subscribe" class="container text-center"> <!-- Added text-center for potential centering -->
+             <h2>Haftalık Bülten'e Üye Ol</h2> <!-- English version of "AI Bülten'e Üye Ol" -->
+             <div class="substack-embed-wrapper">
                 <!-- The iframe provided by the user -->
-                <iframe src="https://yapayzeka101.substack.com/embed" width="400" height="320"
-                    style="background:white; max-width: 100%;" frameborder="0" scrolling="no"
-                    title="Subscribe to Yapay Zeka 101 Newsletter"></iframe>
-            </div>
+                <iframe src="https://yapayzeka101.substack.com/embed" width="400" height="320" style="background:white; max-width: 100%;" frameborder="0" scrolling="no" title="Subscribe to Yapay Zeka 101 Newsletter"></iframe>
+             </div>
+        </section>
+
+
+        <!-- Section 2: Latest AI News -->
+        <section id="latest-ai-news" class="container">
+            <h2>Son Yazılar</h2>
+            <ul id="ai-news-list">
+                <p>Loading latest news...</p> <!-- Placeholder text -->
+            </ul>
         </section>
 
     </main>
@@ -182,11 +188,7 @@
                 <p>© 2025 C. Murad Özsert</p> <!-- Wireframe says 2025, adjust if needed -->
             </div>
             <div class="footer-links">
-                <a href="contact_en.html">Contact</a> <!-- Link to Contact page -->
-                <a href="YOUR_LINKEDIN_URL_HERE" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-                <!-- Add your real LinkedIn URL -->
-                <!-- Add X/Twitter link if desired -->
-                <!-- <a href="YOUR_X_URL_HERE" target="_blank" rel="noopener noreferrer">X</a> -->
+                <a href="contact_tr.html">Contact</a> <!-- Link to Contact page -->
             </div>
         </div>
     </footer>
