--- a/contact_tr.html
+++ b/contact_tr.html
@@ -48,8 +48,9 @@
                         <div class="slide-grid"> <!-- Use Grid or Flexbox for 2 columns -->
                             <div class="content-box">
                                 <h2></h2>
-                                <p>Merhaba,</p>
-                                <p>Etkinlik katılımı, Konuşma daveti ve diğer konular için e-posta ile ulaşabilirsiniz. Biraz gecikme ile de olsa cevap dönmeye çalışıyorum. E-posta: hello@ozsert.com</p>
+                                <p>Etkinlik katılımı, Konuşma daveti ve diğer konular için e-posta ile ulaşabilirsiniz. </p>
+                                <p>Biraz gecikme ile de olsa cevap dönmeye çalışıyorum. </p>
+                                <p>İletişim için E-posta: hello@ozsert.com </p>
                                 <!-- Add more content as needed -->
                             </div>
                             <div class="photo-box">
