--- a/about.html
+++ b/about.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Placeholder: Welcome to C. Murad Özsert's personal website. Learn more about..."> <!-- SEO: Update with real content -->
-
-    <title>C. Murad Özsert - About</title> <!-- SEO: Title -->
+    <meta data-i18n="[content]about.meta_description" name="description">
+    <title data-i18n="about.title"></title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css"> <!-- Link to CSS -->
 
     <!-- Optional Favicons -->
     <!-- <link rel="icon" href="/favicon.ico" sizes="any"> -->
+    <script src="https://unpkg.com/i18next/dist/umd/i18next.min.js"></script>
+    <script src="script.js"></script> <!-- Make sure script.js is loaded after i18next -->
 </head>
 <body>
 
@@ -18,19 +19,19 @@
         <div class="container header-flex"> <!-- Flex container for layout -->
             <div class="logo">
                 <!-- Link the logo/name to the home page of the current language -->
-                <a href="index_tr.html"><strong>C. Murad Özsert</strong></a>
+                <a href="index.html"><strong data-i18n="common_header.logo_text"></strong></a>
             </div>
             <nav class="main-nav">
                 <ul>
                     <!-- Update hrefs when other pages are created -->
-                    <li><a href="about_tr.html">Hakkımda</a></li>
-                    <li><a href="topics_tr.html">Konuşma Konuları</a></li> 
-                    <li><a href="blog_tr.html">Blog</a></li> 
-                    <li><a href="contact_tr.html">İletişim</a></li>
+                    <li><a href="about.html" data-i18n="common_header.nav_about"></a></li>
+                    <li><a href="topics.html" data-i18n="common_header.nav_topics"></a></li> 
+                    <li><a href="blog.html" data-i18n="common_header.nav_blog"></a></li> 
+                    <li><a href="contact.html" data-i18n="common_header.nav_contact"></a></li>
                 </ul>
             </nav>
             <div class="language-toggle">
-                <a href="index_tr.html" class="lang-active">TR</a> | <a href="index_en.html">EN</a>
+                <a href="index.html" class="lang-active" data-i18n="common_header.lang_tr"></a> | <a href="index_en.html" data-i18n="common_header.lang_en"></a>
             </div>
             <!-- Optional: Mobile Menu Button (hidden by default, shown on mobile via CSS) -->
             <!-- <button class="mobile-menu-toggle" aria-label="Open navigation menu">☰</button> -->
@@ -48,10 +49,10 @@
                         <div class="slide-grid"> <!-- Use Grid or Flexbox for 2 columns -->
                             <div class="content-box">
                                 <h2></h2>
-                                <p>Merhaba,</p>
-                                <p>2003 yılında Boğaziçi Üniversitesi Bilgisayar Mühendisliği'ne adım attığımda, aslında sadece bir bölüme değil, uzun bir yolculuğa başlıyordum. Teknolojiye olan merakımın peşine düşmüştüm — ama o günlerde bu merakın beni önce kurumsal dünyanın düzenli ritmine, daha sonra da girişimcilik sahnesinin inişli çıkışlı yollarına götüreceğini bilmiyordum.</p>
-                                <p>İlk yıllarımı büyük kurumsal yapılarda yazılım geliştirerek, ürünler tasarlayarak ve sistemler kurarak geçirdim. Ardından orta ölçekli şirketlerde daha çevik ortamlarda çalışmak, bana hız, esneklik ve doğrudan etki etmenin ne demek olduğunu öğretti. Bu süreçte, finans, telekom ve lojistik gibi farklı sektörlerde çalışarak milyonlarca insanın hayatına doğrudan dokunan ürünler geliştirme şansı buldum. Her farklı ürün, her farklı sektör, yeni bir bakış açısı ve öğrenme alanıydı.</p>
-                            <p>Derken,"Artık kendi yolunu çizmenin vakti geldi" diyerek çok deneyimlemek istediğim girişimcilik yoluna atıldım. Bu cesaret ve istek uzun bir araştırma döneminden sonra  Yolda.com hikayesine dönüştü. İyzico’nun exit sürecinde tanıştığım Volkan Özkan ile beraber girişimcilik dünyasında bulmuştuk kendimizi. </p>
+                                <p data-i18n="about.slide1_greeting"></p>
+                                <p data-i18n="about.slide1_paragraph1"></p>
+                                <p data-i18n="about.slide1_paragraph2"></p>
+                                <p data-i18n="about.slide1_paragraph3"></p>
                                 <!-- Add more content as needed -->
                             </div>
                             <div class="photo-box">
@@ -82,9 +83,9 @@
                             </div>
                             <div class="content-box">
                                 <h2></h2>
-                                <p>Yolda.com, lojistik sektörünü teknolojiyle dönüştürme hayaliyle doğdu. Türkiye ve Almanya’da aktif olarak faaliyet gösteren girişim, 10 milyon doların üzerinde yatırım aldı. Bu sayede alanında öncü ve global yatırımcılarla birlikte çalışma fırsatı yakaladım. Hızlı büyüyen girişimlerin fark yaratan kurucularından oluşan Endeavor ailesine seçildim. Bu girişimcilik yolculuğu, beni konfor alanımın dışına çıkararak her gün yeni bir krizle, her hafta başka bir belirsizlikle başa çıkmayı öğretti.  (Yediğimiz ilk tokat şirketi kurduğumuz ay pandeminin başlaması olmuştu :) </p>
-                                <p>Yatırım ekosisteminin girişimlere bakış açısındaki keskin değişimler ve lokal-global ekonomik dalgalanmalar içinde geçen bu süreç, kimi zaman heyecan verici, kimi zaman ise stresliydi — ama her yönüyle son derece öğretici ve dönüştürücüydü. Tüm bu iniş çıkışların içinde her zaman yola ve yolda kalırken gelişmeye, değer üretmeye ve fark yaratmaya odaklandım.</p>
-                                <p>Yolda.com’u Türkiye’nin önde gelen lojistik şirketlerinden birine devrettikten sonra, artık yeni bir kavşaktaydım. Odağımı yapay zekâya ve onun iş dünyasındaki dönüştürücü gücünü anlamaya, anlatmaya ve yapay zeka destekli ürünler geliştirmeye çevirdim. </p>
+                                <p data-i18n="about.slide2_paragraph1"></p>
+                                <p data-i18n="about.slide2_paragraph2"></p>
+                                <p data-i18n="about.slide2_paragraph3"></p>
                                 <!-- Add more content as needed -->
                             </div>
                            
@@ -111,8 +112,8 @@
 
                             <div class="content-box">
                                 <h2></h2>
-                                <p>Bugün, teknolojiyle insanı bir araya getiren, yenilikçi sistemler ve iş modelleri üzerine çalışmaya devam ediyorum. Girişimlere ve Kurumsal şirketlere ilgilendiğim ve üzerine düşündüğüm bu konularda  danışmanlık veriyorum. Yapay zekânın sadece algoritmalarla sınırlı kalmayan, aynı zamanda düşünce yapılarımızı ve çalışma biçimlerimizi yeniden şekillendiren bir potansiyel taşıdığına inanıyorum. Bu potansiyeli kendi işine uyarlayabileceklerin hayatta kalmaya devam edeceği bir gelecek artık çok yakın.  </p>
-                                <p>Bu site, bu yolculuğun bir parçası. Hikâyemi, deneyimlerimi ve birlikte kafa yorabileceğimiz ihtimalleri paylaşmak için haftalık yapay zeka yazılarıma abone olabilirsin. Belki bir gün bir yerde, hikaylerimiz kesişir, dertleşiriz..</p>
+                                <p data-i18n="about.slide3_paragraph1"></p>
+                                <p data-i18n="about.slide3_paragraph2"></p>
                                 <!-- Add more content as needed -->
                             </div>
                             <div class="photo-box">
@@ -133,15 +134,15 @@
 
         <!-- Section 2: Latest AI News -->
         <section id="latest-ai-news" class="container">
-            <h2>Son Yazılar</h2>
+            <h2 data-i18n="common_latest_posts.latest_posts_title"></h2>
             <ul id="ai-news-list">
-                <p>Loading latest news...</p> <!-- Placeholder text -->
+                <p data-i18n="common_latest_posts.loading_latest_news"></p> <!-- Placeholder text -->
             </ul>
         </section>
 
         <!-- Section 3: Substack Subscribe -->
         <section id="substack-subscribe" class="container text-center"> <!-- Added text-center for potential centering -->
-             <h2>Haftalık Bülten'e Üye Ol</h2> <!-- English version of "AI Bülten'e Üye Ol" -->
+             <h2 data-i18n="common_newsletter.newsletter_signup_title"></h2> <!-- English version of "AI Bülten'e Üye Ol" -->
              <div class="substack-embed-wrapper">
                 <!-- The iframe provided by the user -->
                 <iframe src="https://yapayzeka101.substack.com/embed" width="400" height="320" style="background:white; max-width: 100%;" frameborder="0" scrolling="no" title="Subscribe to Yapay Zeka 101 Newsletter"></iframe>
@@ -153,15 +154,15 @@
     <footer>
         <div class="container footer-flex"> <!-- Flex container for layout -->
             <div class="copyright">
-                <p>© 2025 C. Murad Özsert</p> <!-- Wireframe says 2025, adjust if needed -->
+                <p data-i18n="common_footer.copyright_text"></p> <!-- Wireframe says 2025, adjust if needed -->
             </div>
             <div class="footer-links">
-                <a href="contact_tr.html">Contact</a> <!-- Link to Contact page -->
+                <a href="contact.html" data-i18n="common_footer.footer_contact_link"></a> <!-- Link to Contact page -->
             </div>
         </div>
     </footer>
 
     <!-- Link JavaScript file -->
-    <script src="script.js"></script>
+    <!-- Note: script.js is already included in the head -->
 </body>
 </html>
