--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,16 +12,17 @@
     <!-- Optional Favicons -->
     <!-- <link rel="icon" href="/favicon.ico" sizes="any"> -->
     <script src="https://unpkg.com/i18next/dist/umd/i18next.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
 
     <header>
         <div class="container header-flex"> <!-- Flex container for layout -->
-                       <div class="logo">
+            <div class="logo">
                 <!-- Link the logo/name to the home page of the current language -->
                 <a href="index.html"><strong data-i18n="common_header.logo_text"></strong></a>
-            </div>            <nav class="main-nav">
+            </div>
+            <nav class="main-nav">
                 <ul>
                     <!-- Update hrefs when other pages are created -->
                     <li><a href="about.html" data-i18n="common_header.nav_about"></a></li>
@@ -31,7 +32,7 @@
                 </ul>
             </nav>
             <div class="language-toggle">
-                <a href="index.html" class="lang-active" data-i18n="common_header.lang_tr"></a> | <a href="index_en.html" data-i18n="common_header.lang_en"></a>
+                <a href="#" id="lang-tr" data-lang="tr" data-i18n="common_header.lang_tr"></a> | <a href="#" id="lang-en" data-lang="en" data-i18n="common_header.lang_en"></a>
             </div>
             <!-- Optional: Mobile Menu Button (hidden by default, shown on mobile via CSS) -->
             <!-- <button class="mobile-menu-toggle" aria-label="Open navigation menu">☰</button> -->
