--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
     <!-- Optional Favicons -->
     <!-- <link rel="icon" href="/favicon.ico" sizes="any"> -->
     <script src="https://unpkg.com/i18next/dist/umd/i18next.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -32,7 +32,7 @@
                 </ul>
             </nav>
             <div class="language-toggle">
-                <a href="index.html" class="lang-active" data-i18n="common_header.lang_tr"></a> | <a href="index_en.html" data-i18n="common_header.lang_en"></a>
+                <a href="#" id="lang-tr" data-lang="tr" data-i18n="common_header.lang_tr"></a> | <a href="#" id="lang-en" data-lang="en" data-i18n="common_header.lang_en"></a>
             </div>
             <!-- Optional: Mobile Menu Button (hidden by default, shown on mobile via CSS) -->
             <!-- <button class="mobile-menu-toggle" aria-label="Open navigation menu">☰</button> -->
