hover effect index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
                                 <!-- Add more content as needed -->
                             </div>
                             <div class="photo-box">
-                                <img src="assets/Main_1.jpg" alt="Placeholder for personal photograph" style="width:100%; max-width:400px; height:auto; background:#ccc;">
+                                <div class="photo-hover-container">
+                                    <img src="assets/Main_1.jpg" alt="Placeholder for personal photograph" class="main-photo main-photo-front" style="width:100%; max-width:400px; height:auto; background:#ccc;">
+                                    <img src="assets/Main_2.jpg" alt="Animated personal photograph" class="main-photo main-photo-back" style="width:100%; max-width:400px; height:auto; background:#ccc;">
+                                </div>
                             </div>
                         </div>
                     </div>
