CArousel dot navigation completed.

--- a/topics.html
+++ b/topics.html
@@ -109,7 +109,13 @@
                 </li>
 
             </ul>
-
+            <!-- Add dot navigation for this carousel -->
+            <div class="carousel-dots">
+                <span class="dot active" data-index="0"></span>
+                <span class="dot" data-index="1"></span>
+                <span class="dot" data-index="2"></span>
+                <span class="dot" data-index="3"></span>
+            </div>
         </section>
 
         <!-- Section 2: Carousel (Structure for one slide) -->
@@ -177,7 +183,13 @@
                     </div>
                 </li>
             </ul>
-
+            <!-- Add dot navigation for this carousel -->
+            <div class="carousel-dots">
+                <span class="dot active" data-index="0"></span>
+                <span class="dot" data-index="1"></span>
+                <span class="dot" data-index="2"></span>
+                <span class="dot" data-index="3"></span>
+            </div>
         </section>
 
 
@@ -246,7 +258,13 @@
                     </div>
                 </li>
             </ul>
-
+            <!-- Add dot navigation for this carousel -->
+            <div class="carousel-dots">
+                <span class="dot active" data-index="0"></span>
+                <span class="dot" data-index="1"></span>
+                <span class="dot" data-index="2"></span>
+                <span class="dot" data-index="3"></span>
+            </div>
         </section>
 
         <!-- Section 3: Substack Subscribe -->
