--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                                 <!-- Add more content as needed -->
                             </div>
                             <div class="photo-box">
-                                <img src="assets/About_1.png" alt="Placeholder for personal photograph" style="width:100%; max-width:400px; height:auto; background:#ccc;">
+                                <img src="assets/About_4.jpg" alt="Placeholder for personal photograph" style="width:100%; max-width:400px; height:auto; background:#ccc;">
                             </div>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                                 <!-- Add more content as needed -->
                             </div>
                             <div class="photo-box">
-                                <img src="assets/About_3.png" alt="Placeholder for personal photograph" style="width:100%; max-width:400px; height:auto; background:#ccc;">
+                                <img src="assets/About_3.jpg" alt="Placeholder for personal photograph" style="width:100%; max-width:400px; height:auto; background:#ccc;">
                             </div>
                         </div>
                     </div>
