--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
     </header>
 
     <main>
+        <!-- AI Credits Banner -->
+        <div class="ai-credits-banner" role="complementary" aria-label="AI credits information">
+            <div class="ai-icon" aria-hidden="true">
+                <img src="assets/lucide-bot.svg" alt="AI Bot Icon" width="24" height="24" class="lucide lucide-bot">
+            </div>
+            <span><strong>Built by AI</strong> (Claude, Gemini & GitHub Copilot).</span>
+            <div class="ai-icon" aria-hidden="true">
+                <img src="assets/lucide-pen.svg" alt="Pen Tool Icon" width="24" height="24" class="lucide lucide-pen-tool">
+            </div>
+            <span><strong>All words lovingly written by humans.</strong></span>
+        </div>
+
         <!-- Section 1: Carousel (Structure for one slide) -->
         <section id="hero-carousel" aria-label="Introduction Carousel">
             <div class="container">
