--- a/index.html
+++ b/index.html
@@ -37,15 +37,19 @@
 
     <main>
         <!-- AI Credits Banner -->
-        <div class="ai-credits-banner" role="complementary" aria-label="AI credits information">
-            <div class="ai-icon" aria-hidden="true">
-                <img src="assets/lucide-bot.svg" alt="AI Bot Icon" width="24" height="24" class="lucide lucide-bot">
+        <div class="banner-wrapper">
+            <div class="ai-credits-banner" role="complementary" aria-label="AI credits information">
+                <div class="ai-icon" aria-hidden="true">
+                    <img src="assets/lucide-bot.svg" alt="AI Bot Icon" width="24" height="24" class="lucide lucide-bot">
+                </div>
+                <div class="ai-text-container">
+                    <div class="ai-text-bold"><strong>Built by AI (Claude, Gemini & GitHub Copilot).</strong></div>
+                    <div class="ai-text-regular">All words lovingly written by humans.</div>
+                </div>
+                <div class="ai-icon" aria-hidden="true">
+                    <img src="assets/lucide-pen.svg" alt="Pen Tool Icon" width="24" height="24" class="lucide lucide-pen-tool">
+                </div>
             </div>
-            <span><strong>Built by AI</strong> (Claude, Gemini & GitHub Copilot).</span>
-            <div class="ai-icon" aria-hidden="true">
-                <img src="assets/lucide-pen.svg" alt="Pen Tool Icon" width="24" height="24" class="lucide lucide-pen-tool">
-            </div>
-            <span><strong>All words lovingly written by humans.</strong></span>
         </div>
 
         <!-- Section 1: Carousel (Structure for one slide) -->
