content banner updated

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     <img src="assets/lucide-bot.svg" alt="AI Bot Icon" width="24" height="24" class="lucide lucide-bot">
                 </div>
                 <div class="ai-text-container">
-                    <div class="ai-text-bold"><strong>Built by AI (Claude, Gemini & GitHub Copilot).</strong></div>
-                    <div class="ai-text-regular">All words lovingly written by humans.</div>
+                    <div class="ai-text-bold"><strong data-i18n="common_banner.ai_built_by"></strong></div>
+                    <div class="ai-text-regular" data-i18n="common_banner.ai_human_words"></div>
                 </div>
                 <div class="ai-icon" aria-hidden="true">
                     <img src="assets/lucide-pen.svg" alt="Pen Tool Icon" width="24" height="24" class="lucide lucide-pen-tool">
