ui improvements and ai banner

--- a/about.html
+++ b/about.html
@@ -39,6 +39,22 @@
     </header>
 
     <main>
+                <!-- AI Credits Banner -->
+        <div class="banner-wrapper">
+            <div class="ai-credits-banner" role="complementary" aria-label="AI credits information">
+                <div class="ai-icon" aria-hidden="true">
+                    <img src="assets/lucide-bot.svg" alt="AI Bot Icon" width="24" height="24" class="lucide lucide-bot">
+                </div>
+                <div class="ai-text-container">
+                    <div class="ai-text-bold"><strong data-i18n="common_banner.ai_built_by"></strong></div>
+                    <div class="ai-text-regular" data-i18n="common_banner.ai_human_words"></div>
+                </div>
+                <div class="ai-icon" aria-hidden="true">
+                    <img src="assets/lucide-pen.svg" alt="Pen Tool Icon" width="24" height="24" class="lucide lucide-pen-tool">
+                </div>
+            </div>
+        </div>
+        
         <!-- Section 1: Carousel () -->
         <section id="hero-carousel" aria-label="Introduction Carousel">
             <div class="container">
