--- a/topics.html
+++ b/topics.html
@@ -43,6 +43,21 @@
     </header>
 
     <main>
+                <!-- AI Credits Banner -->
+        <div class="banner-wrapper">
+            <div class="ai-credits-banner" role="complementary" aria-label="AI credits information">
+                <div class="ai-icon" aria-hidden="true">
+                    <img src="assets/lucide-bot.svg" alt="AI Bot Icon" width="24" height="24" class="lucide lucide-bot">
+                </div>
+                <div class="ai-text-container">
+                    <div class="ai-text-bold"><strong data-i18n="common_banner.ai_built_by"></strong></div>
+                    <div class="ai-text-regular" data-i18n="common_banner.ai_human_words"></div>
+                </div>
+                <div class="ai-icon" aria-hidden="true">
+                    <img src="assets/lucide-pen.svg" alt="Pen Tool Icon" width="24" height="24" class="lucide lucide-pen-tool">
+                </div>
+            </div>
+        </div>
         <!-- Section 1: Carousel (Structure for one slide) -->
         <section id="ai-topics" class="container">
             <h3 data-i18n="topics.vol1_title"></h3>
