Fixing bot scrapping

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,10 @@
                                 <h2></h2>
                                 <p data-i18n="contact.contact_intro1"></p>
                                 <p data-i18n="contact.contact_intro2"></p>
-                                <p data-i18n="contact.contact_email_info"></p>
+                                <p>
+                                    <span data-i18n="contact.contact_email_instruction"></span>
+                                    <a id="email-link" href="#"></a>
+                                </p>
                                 <!-- Add more content as needed -->
                             </div>
                             <div class="photo-box">
